--- a/Relectoral/NAMESPACE
+++ b/Relectoral/NAMESPACE
@@ -22,11 +22,14 @@ export(L_max)
 export(Loos_Hanby)
 export(Rae)
 export(Rae_corregido)
+export(Regionalismo)
 export(Restos_Mayores)
 export(Sainte_Lague)
 export(competitividad)
 export(concentracion)
 export(fragmentacion_rae)
+export(get_CCAA)
+export(get_Provincias)
 export(hiper)
 export(mapa)
 export(nep)
